deal with the problem in thread and base64