@@ -1,10 +1,9 @@
 package com.ping.thingsjournalclient.util;
 
+import java.util.Base64;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 public class SM4Util {
 
@@ -23,7 +22,8 @@ public class SM4Util {
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_enc(ctx, keyBytes);
 			byte[] encrypted = sm4.sm4_crypt_ecb(ctx, plainText.getBytes("UTF-8"));
-			String cipherText = new BASE64Encoder().encode(encrypted);
+//			String cipherText = new BASE64Encoder().encode(encrypted);
+			String cipherText = Base64.getEncoder().encodeToString(encrypted);
 			if (cipherText != null && cipherText.trim().length() > 0)
 			{
 				Pattern p = Pattern.compile("\\s*|\t|\r|\n");
@@ -53,7 +53,8 @@ public class SM4Util {
 			
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_dec(ctx, keyBytes);
-			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+//			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, Base64.getDecoder().decode(cipherText));
 			return new String(decrypted, "UTF-8");
 		} 
 		catch (Exception e) 
