@@ -1,11 +1,14 @@
 package com.ping.thingsjournalclient.util;
 
 import java.io.IOException;
+import java.util.Base64;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+	
+
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
 
 public class SM4Utils
 {
@@ -38,7 +41,8 @@ public class SM4Utils
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_enc(ctx, keyBytes);
 			byte[] encrypted = sm4.sm4_crypt_ecb(ctx, plainText.getBytes("UTF-8"));
-			String cipherText = new BASE64Encoder().encode(encrypted);
+//			String cipherText = new BASE64Encoder().encode(encrypted);
+			String cipherText = Base64.getEncoder().encodeToString(encrypted);
 			if (cipherText != null && cipherText.trim().length() > 0)
 			{
 				Pattern p = Pattern.compile("\\s*|\t|\r|\n");
@@ -74,7 +78,8 @@ public class SM4Utils
 			
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_dec(ctx, keyBytes);
-			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+//			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, new BASE64Decoder().decodeBuffer(cipherText));
+			byte[] decrypted = sm4.sm4_crypt_ecb(ctx, Base64.getDecoder().decode(cipherText));
 			return new String(decrypted, "UTF-8");
 		} 
 		catch (Exception e) 
@@ -108,7 +113,8 @@ public class SM4Utils
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_enc(ctx, keyBytes);
 			byte[] encrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, plainText.getBytes("UTF-8"));
-			String cipherText = new BASE64Encoder().encode(encrypted);
+//			String cipherText = new BASE64Encoder().encode(encrypted);
+			String cipherText = Base64.getEncoder().encodeToString(encrypted);
 			if (cipherText != null && cipherText.trim().length() > 0)
 			{
 				Pattern p = Pattern.compile("\\s*|\t|\r|\n");
@@ -147,7 +153,8 @@ public class SM4Utils
 			
 			SM4 sm4 = new SM4();
 			sm4.sm4_setkey_dec(ctx, keyBytes);
-			byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, new BASE64Decoder().decodeBuffer(cipherText));
+//			byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, new BASE64Decoder().decodeBuffer(cipherText));
+			byte[] decrypted = sm4.sm4_crypt_cbc(ctx, ivBytes, Base64.getDecoder().decode(cipherText));
 			return new String(decrypted, "UTF-8");
 		} 
 		catch (Exception e)
